--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
     "mysql": "^2.18.1",
@@ -12,8 +13,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/server.js",
-    "start-dev": "nodemon ./src/server.js"
+    "start": "node server.js",
+    "start-dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
