--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node server.js",
-    "start-dev": "NODE_ENV=development nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
